generar binaris compatibles amb java8